--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,6 +31,34 @@ services:
     depends_on:
     - "zookeeper"
 
+  kafka1:
+    image: confluentinc/cp-kafka:5.2.2
+    ports:
+    - "9093:9093"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
+      KAFKA_ADVERTISED_LISTENERS: "INTERNAL://kafka1:19093,EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9093"
+      KAFKA_INTER_BROKER_LISTENER_NAME: "INTERNAL"
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT"
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: "1"
+    depends_on:
+    - "zookeeper"
+
+  kafka2:
+    image: confluentinc/cp-kafka:5.2.2
+    ports:
+    - "9094:9094"
+    environment:
+      KAFKA_BROKER_ID: 2
+      KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
+      KAFKA_ADVERTISED_LISTENERS: "INTERNAL://kafka2:19094,EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9094"
+      KAFKA_INTER_BROKER_LISTENER_NAME: "INTERNAL"
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT"
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: "1"
+    depends_on:
+    - "zookeeper"
+
   schema-registry:
     image: confluentinc/cp-schema-registry:5.2.2
     ports:
@@ -61,7 +89,7 @@ services:
     ports:
     - "8083:8083"
     environment:
-      CONNECT_BOOTSTRAP_SERVERS: "PLAINTEXT://kafka0:19092"
+      CONNECT_BOOTSTRAP_SERVERS: "PLAINTEXT://kafka0:19092, PLAINTEXT://kafka1:19093, PLAINTEXT://kafka2:19094"
       CONNECT_GROUP_ID: "connect"
       CONNECT_REST_ADVERTISED_HOST_NAME: "connect"
       CONNECT_PLUGIN_PATH: "/usr/share/java"
@@ -79,6 +107,8 @@ services:
       CONNECT_STATUS_STORAGE_REPLICATION_FACTOR: "1"
     depends_on:
     - "kafka0"
+    - "kafka1"
+    - "kafka2"
     - "schema-registry"
 
   ksql:
